# stm32-cmake-build

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  Readme.md  another-test.ioc  make_project.py
Drivers/STM32F1xx/Inc/: stm32f103x6.h  stm32f1xx.h  system_stm32f1xx.h
Drivers/STM32F1xx_HAL_Driver/Src/: stm32f1xx_hal_timebase_rtc_alarm_template.c
Inc/: stm32f1xx_hal_conf.h
Src/: CppTest.cpp  CppTest.h  main.c  main.cpp  stm32f1xx_hal_msp.c
Src/HAL/: Core.cpp  Core.h  InterruptSource.h
cmake/: CMSIS.cmake
cmake/stm32/: .DONT_REMOVE
